fix title spacing part 2

--- a/css/tufte.scss
+++ b/css/tufte.scss
@@ -143,7 +143,7 @@ h1 { font-weight: 400;
      line-height: 1; }
 
 h1.header-title { font-weight: 400;
-     margin-top: 4rem;
+     margin-top: 1.5rem;
      margin-bottom: 1.5rem;
      font-size: 6rem;
      line-height: 1; 
